--- a/spark_task2 (1).ipynb
+++ b/spark_task2 (1).ipynb
@@ -13,7 +13,7 @@
     "\n",
     "### CREATOR- T.SAJID ABBAS\n",
     "\n",
-    "### TASK 2: Prediction using Supervised ML\n"
+    "### TASK 2: Prediction using unsupervised ML\n"
    ]
   },
   {
